--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==25.1.2
 setuptools==69.2.0
--e git+https://github.com/BardiaAlavi/SimbaTollator.git@5486d0ff3904bd507d4debfca60e70d0bdaa78bd#egg=simbatolls
+-e git+https://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:x-oauth-basic@github.com/BardiaAlavi/SimbaTollator.git@5486d0ff3904bd507d4debfca60e70d0bdaa78bd#egg=simbatolls
 six==1.16.0
 SQLAlchemy==2.0.29
 stack-data==0.6.3
