--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ pyqt6 = "^6.6.1"
 xlrd = "^2.0.1"
 temp = "^2020.7.2"
 gunicorn = "^21.2.0"
+flask-login = "^0.6.3"
+flask-sqlalchemy = "^3.1.1"
+flask-bcrypt = "^1.0.1"
+app = "^0.0.1"
+bcrypt = "^4.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
