--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+app==0.0.1
 appnope==0.1.4
 asttokens==2.4.1
+bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
 comm==0.2.2
@@ -11,6 +13,9 @@ decorator==5.1.1
 et-xmlfile==1.1.0
 executing==2.0.1
 Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 fonttools==4.51.0
 gunicorn==21.2.0
 ipykernel==6.29.4
@@ -48,7 +53,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==25.1.2
 setuptools==69.2.0
--e git+https://github.com/BardiaAlavi/SimbaTollator.git@dff2e6d8c1f86d4bd806f4f2aa12da0069ea3fe9#egg=simbatolls
+-e git+https://github.com/BardiaAlavi/SimbaTollator.git@89c6910411bde7c9e721bd1c9a03ccc1ad26556c#egg=simbatolls
 six==1.16.0
 SQLAlchemy==2.0.29
 stack-data==0.6.3
