--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ flask-sqlalchemy = "^3.1.1"
 flask-bcrypt = "^1.0.1"
 app = "^0.0.1"
 bcrypt = "^4.1.2"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
