--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ app = "^0.0.1"
 bcrypt = "^4.1.2"
 psycopg2-binary = "^2.9.9"
 flask-migrate = "^4.0.7"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
