--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 app==0.0.1
 appnope==0.1.4
 asttokens==2.4.1
@@ -15,6 +16,7 @@ executing==2.0.1
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 fonttools==4.51.0
 gunicorn==21.2.0
@@ -26,6 +28,7 @@ Jinja2==3.1.3
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 kiwisolver==1.4.5
+Mako==1.3.3
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
@@ -51,10 +54,11 @@ PyQt6==6.6.1
 PyQt6-Qt6==6.6.3
 PyQt6-sip==13.6.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 pyzmq==25.1.2
 setuptools==69.2.0
--e git+https://github.com/BardiaAlavi/SimbaTollator.git@94e9e0a1ba4b6210f6a187e6dd2f30a53c02773d#egg=simbatolls
+-e git+https://github.com/BardiaAlavi/SimbaTollator.git@477dca98749c54c62103b5ca6942a9cc93be01a4#egg=simbatolls
 six==1.16.0
 SQLAlchemy==2.0.29
 stack-data==0.6.3
