--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ bcrypt = "^4.1.2"
 psycopg2-binary = "^2.9.9"
 flask-migrate = "^4.0.7"
 python-dotenv = "^1.0.1"
+traceback2 = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
