--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Jinja2==3.1.3
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 kiwisolver==1.4.5
+linecache2==1.0.0
 Mako==1.3.3
 MarkupSafe==2.1.5
 matplotlib==3.8.4
@@ -58,13 +59,14 @@ python-dotenv==1.0.1
 pytz==2024.1
 pyzmq==25.1.2
 setuptools==69.2.0
--e git+https://github.com/BardiaAlavi/SimbaTollator.git@c4251fcf48c693e5911c6e6a63d47b5ff6115b62#egg=simbatolls
+-e git+https://github.com/BardiaAlavi/SimbaTollator.git@9345a9119fafe4edd0e5d707d4969bb0fb5efa10#egg=simbatolls
 six==1.16.0
 SQLAlchemy==2.0.29
 stack-data==0.6.3
 temp==2020.7.2
 tenacity==8.2.3
 tornado==6.4
+traceback2==1.4.0
 traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
