--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ python-dotenv = "^1.0.1"
 traceback2 = "^1.4.0"
 redis = "^5.0.4"
 rq = "^1.16.1"
+python-io = "^0.3"
 
 
 [tool.poetry.group.dev.dependencies]
