--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,14 @@ appnope==0.1.4
 asttokens==2.4.1
 bcrypt==4.1.2
 blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
+customtkinter==5.2.2
 cycler==0.12.1
+darkdetect==0.8.0
 DateTime==5.5
 debugpy==1.8.1
 decorator==5.1.1
@@ -20,6 +24,7 @@ Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 fonttools==4.51.0
 gunicorn==21.2.0
+idna==3.7
 ipykernel==6.29.4
 ipython==8.23.0
 itsdangerous==2.1.2
@@ -56,12 +61,14 @@ PyQt6-Qt6==6.6.3
 PyQt6-sip==13.6.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+Python_IO==0.3
 pytz==2024.1
 pyzmq==25.1.2
 redis==5.0.4
+requests==2.31.0
 rq==1.16.1
 setuptools==69.2.0
--e git+https://github.com/BardiaAlavi/SimbaTollator.git@72d7b8fea18b2462510b99eb76b5da4b75a73678#egg=simbatolls
+-e git+https://github.com/BardiaAlavi/SimbaTollator.git@8e7e6ab304426c4df44370547b8a9153e46157bd#egg=simbatolls
 six==1.16.0
 SQLAlchemy==2.0.29
 stack-data==0.6.3
@@ -72,6 +79,7 @@ traceback2==1.4.0
 traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
+urllib3==2.2.1
 wcwidth==0.2.13
 Werkzeug==3.0.2
 xlrd==2.0.1
