--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 alembic==1.13.1
+amqp==5.2.0
 app==0.0.1
 appnope==0.1.4
 asttokens==2.4.1
 bcrypt==4.1.2
+billiard==4.2.0
 blinker==1.7.0
+celery==5.4.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 comm==0.2.2
 contourpy==1.2.1
 customtkinter==5.2.2
@@ -33,6 +39,7 @@ Jinja2==3.1.3
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 kiwisolver==1.4.5
+kombu==5.3.7
 linecache2==1.0.0
 Mako==1.3.3
 MarkupSafe==2.1.5
@@ -68,7 +75,7 @@ redis==5.0.4
 requests==2.31.0
 rq==1.16.1
 setuptools==69.2.0
--e git+https://github.com/BardiaAlavi/SimbaTollator.git@8e7e6ab304426c4df44370547b8a9153e46157bd#egg=simbatolls
+-e git+https://github.com/BardiaAlavi/SimbaTollator.git@997d9d8ff6ac065a7aa15a2c6d9acb962b9d79af#egg=simbatolls
 six==1.16.0
 SQLAlchemy==2.0.29
 stack-data==0.6.3
@@ -80,6 +87,7 @@ traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.0.2
 xlrd==2.0.1
